[gd_scene load_steps=19 format=3 uid="uid://xq5sy8c0spv"]

[ext_resource type="Script" uid="uid://b5tu1kmpud46l" path="res://common/setting/setting_view.gd" id="1_7xfc6"]
[ext_resource type="AudioStream" uid="uid://c12134dx2n1k4" path="res://sound/maou_se_system47.mp3" id="1_twnpm"]
[ext_resource type="Texture2D" uid="uid://bb4exyrnh7o00" path="res://image/scrollbar_bg.png" id="2_dcjoh"]
[ext_resource type="Texture2D" uid="uid://cn5qct58mryrh" path="res://image/option_bg.png" id="2_swdfx"]
[ext_resource type="Texture2D" uid="uid://dhac8pkp4th8t" path="res://image/scrollbar_button.png" id="3_3bf00"]
[ext_resource type="StyleBox" uid="uid://dt668qnahk8mf" path="res://common/option/option_bg.tres" id="3_mup16"]
[ext_resource type="Texture2D" uid="uid://b11ieyxtcxqxy" path="res://image/scrollbar_a.png" id="4_b4maj"]
[ext_resource type="StyleBox" uid="uid://iq7a2hdjuv66" path="res://common/option/option_bg_pressed.tres" id="4_hh6qm"]
[ext_resource type="Texture2D" uid="uid://cf56efcp2a3ll" path="res://image/scrollbar_b.png" id="5_7bw3q"]
[ext_resource type="PackedScene" uid="uid://c2hckrk53snne" path="res://common/btn/return/return_button.tscn" id="10_rms1i"]

[sub_resource type="ImageTexture" id="ImageTexture_yg4do"]

[sub_resource type="ImageTexture" id="ImageTexture_yq2r3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uw6nk"]
texture = ExtResource("4_b4maj")
texture_margin_left = 30.0
texture_margin_top = 10.0
texture_margin_right = 30.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7q8v3"]
texture = ExtResource("5_7bw3q")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ykjmi"]
texture = ExtResource("5_7bw3q")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w68s3"]
texture = ExtResource("4_b4maj")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jh5ih"]
texture = ExtResource("5_7bw3q")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7cd5r"]
texture = ExtResource("5_7bw3q")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[node name="SettingView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xfc6")

[node name="SettingBG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_swdfx")
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="LangLabel" type="Label" parent="SettingBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43
anchor_top = 0.35
anchor_right = 0.43
anchor_bottom = 0.35
offset_left = -164.4
offset_top = -157.0
offset_right = -64.4
offset_bottom = -87.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "語言"
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="SettingBG/LangLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = ExtResource("3_mup16")
theme_override_styles/pressed = ExtResource("4_hh6qm")
theme_override_styles/normal = ExtResource("3_mup16")
theme_override_icons/arrow = SubResource("ImageTexture_yg4do")
selected = 0
fit_to_longest_item = false
item_count = 3
popup/item_0/text = "繁體中文"
popup/item_0/id = 0
popup/item_1/text = "简体中文"
popup/item_1/id = 1
popup/item_2/text = "English"
popup/item_2/id = 2

[node name="DisplayLabel" type="Label" parent="SettingBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43
anchor_top = 0.45
anchor_right = 0.43
anchor_bottom = 0.45
offset_left = -164.4
offset_top = -109.0
offset_right = -64.4
offset_bottom = -39.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "顯示"
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="SettingBG/DisplayLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = ExtResource("3_mup16")
theme_override_styles/pressed = ExtResource("4_hh6qm")
theme_override_styles/normal = ExtResource("3_mup16")
theme_override_icons/arrow = SubResource("ImageTexture_yq2r3")
selected = 0
fit_to_longest_item = false
item_count = 5
popup/item_0/text = "視窗 720p"
popup/item_0/id = 0
popup/item_1/text = "視窗 1080p"
popup/item_1/id = 1
popup/item_2/text = "視窗 1440p"
popup/item_2/id = 2
popup/item_3/text = "視窗 2160p"
popup/item_3/id = 3
popup/item_4/text = "全螢幕"
popup/item_4/id = 4

[node name="MusicLabel" type="Label" parent="SettingBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43
anchor_top = 0.55
anchor_right = 0.43
anchor_bottom = 0.55
offset_left = -164.4
offset_top = -61.0
offset_right = -64.4
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "音樂"
horizontal_alignment = 2

[node name="BG" type="NinePatchRect" parent="SettingBG/MusicLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -15.0
offset_right = 461.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_dcjoh")
patch_margin_left = 30
patch_margin_top = 20
patch_margin_right = 30
patch_margin_bottom = 20

[node name="MusicSlider" type="HSlider" parent="SettingBG/MusicLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -19.5
offset_right = 450.0
offset_bottom = 20.5
grow_horizontal = 0
grow_vertical = 2
theme_override_icons/grabber = ExtResource("3_3bf00")
theme_override_icons/grabber_highlight = ExtResource("3_3bf00")
theme_override_styles/slider = SubResource("StyleBoxTexture_uw6nk")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_7q8v3")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_ykjmi")
max_value = 1.0
step = 0.01
value = 0.5

[node name="SoundLabel" type="Label" parent="SettingBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43
anchor_top = 0.65
anchor_right = 0.43
anchor_bottom = 0.65
offset_left = -164.4
offset_top = -13.0
offset_right = -64.4
offset_bottom = 57.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "音效"
horizontal_alignment = 2

[node name="BG" type="NinePatchRect" parent="SettingBG/SoundLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -15.0
offset_right = 461.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_dcjoh")
patch_margin_left = 30
patch_margin_top = 20
patch_margin_right = 30
patch_margin_bottom = 20

[node name="SoundSlider" type="HSlider" parent="SettingBG/SoundLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -19.5
offset_right = 449.0
offset_bottom = 19.5
grow_horizontal = 0
grow_vertical = 2
theme_override_icons/grabber = ExtResource("3_3bf00")
theme_override_icons/grabber_highlight = ExtResource("3_3bf00")
theme_override_styles/slider = SubResource("StyleBoxTexture_w68s3")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_jh5ih")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_7cd5r")
max_value = 1.0
step = 0.01
value = 0.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SettingBG/SoundLabel/SoundSlider"]
stream = ExtResource("1_twnpm")
bus = &"SFX"

[node name="ReturnButton" parent="SettingBG" instance=ExtResource("10_rms1i")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 163.0
offset_right = 50.0
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
type = 1

[connection signal="item_selected" from="SettingBG/LangLabel/OptionButton" to="." method="_on_lang_option_item_selected"]
[connection signal="pressed" from="SettingBG/LangLabel/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="item_selected" from="SettingBG/DisplayLabel/OptionButton" to="." method="_on_display_option_item_selected"]
[connection signal="pressed" from="SettingBG/DisplayLabel/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="value_changed" from="SettingBG/MusicLabel/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="SettingBG/SoundLabel/SoundSlider" to="." method="_on_sound_slider_drag_ended"]
[connection signal="value_changed" from="SettingBG/SoundLabel/SoundSlider" to="." method="_on_sound_slider_value_changed"]
[connection signal="pressed" from="SettingBG/ReturnButton" to="." method="_on_close_button_pressed"]
